--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12935,7 +12935,7 @@ pre .code {
 .headerabha {
   height: 75%;
   min-height: 200px;
-  background: url(../imgs/abhaheader.jpg) no-repeat center center fixed;
+  background: url(../imgs/abhah.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
