--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12942,7 +12942,7 @@ pre .code {
 .headeralola {
   height: 75%;
   min-height: 200px;
-  background: url(../imgs/alolaheader.jpg) no-repeat center center fixed;
+  background: url(../imgs/جبل الفيل.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
